# Minimal_qt_App_with_conan

./: CMakeLists.txt  MainForm.cpp  MainForm.h  MainForm_ui.h  README.md  conanfile.py  main.cpp
